removed bootstrap style sheet since import is from npm

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
 
     -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Coolors Palette Widget -->
+   
     <title>Lift Off!</title>
   </head>
   <body>
