moved server directory into project root for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
    crossorigin=""/>
     <!-- Coolors Palette Widget -->
    
-    <title>Lift Off!</title>
+    <title>LaunchPad!</title>
   </head>
   <body>
     <div id="root"></div>
